Se estilizan las vistas

--- a/app/view/partial/header.mustache
+++ b/app/view/partial/header.mustache
@@ -9,6 +9,7 @@
             {{/usuario}}
             {{^usuario}}
                 <li class="nav-item"><a class="nav-link" href="/login">Iniciar sesión</a></li>
+                <li class="nav-item"><a class="nav-link" href="/registro">Registro</a></li>
             {{/usuario}}
         </ul>
     </div>
