--- a/app/view/login.mustache
+++ b/app/view/login.mustache
@@ -1,12 +1,56 @@
-<form action="/login/usuario" method="post">
-    <label for="nombre">Nombre:
-        <input type="text" name="nombre" id="nombre"></label>
+<!doctype html>
+<html lang="es">
+<head>
+    <meta charset="utf-8">
+    <title>Dashboard usuario</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <label for="password">Password:
-        <input type="password" name="password" id="password"></label>
-    <button type="submit">Ingresar</button>
+</head>
+<body>
+{{> header}}
 
-</form>
-{{#error}}
-    <b style="color:red;">{{error}}</b>
-{{/error}}
+<div class="d-flex justify-content-center py-3">
+
+    <div  style="width: 40rem;" {{#error}}class="card border-danger"{{/error}}{{^error}}class="card"{{/error}}>
+        <div class="card-header text-center">
+            Ingreso usuarios
+        </div>
+        <div class="card-body">
+            <form action="/login/usuario" method="post">
+                <fieldset>
+                    <div class="form-group">
+                        <label for="nombre">Usuario</label>
+                        <input type="text" id="nombre" name="nombre" class="form-control" autocomplete="off" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Contraseña</label>
+                        <input type="password" id="password" name="password" class="form-control" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Ingresar</button>
+                </fieldset>
+            </form>
+        </div>
+        {{#error}}
+            <div class="p-2 bd-highlight">
+                <div class="alert alert-danger" role="alert">
+                    {{error}}
+                </div>
+            </div>
+        {{/error}}
+
+    </div>
+    </div>
+
+
+
+
+
+{{> footer}}
+<script type="application/javascript">
+</script>
+</body>
+</html>
