--- a/app/view/partial/footer.mustache
+++ b/app/view/partial/footer.mustache
@@ -1,5 +1,9 @@
-<footer>
-    redechos deservados
+<footer class="page-footer bg-primary fixed-bottom">
+
+
+    <div class="text-center py-3 text-white">© 2020 Copyright</div>
+
+
 </footer>
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
