--- a/app/view/dashboard.mustache
+++ b/app/view/dashboard.mustache
@@ -1,21 +1,4 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="utf-8">
-    <title>Dashboard usuario</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
-</head>
-<body>
-{{> header}}
 <div class="container-fluid">
-    <h1>Bienvenido, {{usuario.nombre}}</h1>
+    <h1>Bienvenido, {{session.usuario.nombre}}</h1>
 </div>
-{{> footer}}
-<script type="application/javascript">
-</script>
-</body>
-</html>
 
