--- a/app/view/login-exitoso.mustache
+++ b/app/view/login-exitoso.mustache
@@ -1,32 +1,15 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="utf-8">
-    <title>Redireccioando</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-</head>
-<body>
-
-<div class="container">
-
-
-
+<div class="container-fluid">
     <div class="text-center">
         <h2>Redireccionando a la pagina de usuario</h2>
         <div class="spinner-border" role="status">
             <span class="sr-only">Cargando...</span>
         </div>
     </div>
-
 </div>
-{{> footer}}
 <script type="application/javascript">
     setTimeout(function() {
         window.location.href = '/dashboard';
     }, 3000);
 </script>
-</body>
-</html>
+
 
