Se agrega el registro de personas

--- a/app/view/registro-exito.mustache
+++ b/app/view/registro-exito.mustache
@@ -1,1 +1,6 @@
-Registro exitoso
+<h1>Registro exitoso</h1>\
+<script type="text/javascript">
+    setTimeout(function() {
+        window.location.href = '/login';
+    }, 3000);
+</script>
