--- a/app/view/dashboard.mustache
+++ b/app/view/dashboard.mustache
@@ -1,4 +1,4 @@
 <div class="container-fluid">
-    <h1>Bienvenido, {{session.usuario.nombre}}</h1>
+    <h1>Bienvenido, {{session.usuario.apellido}} {{session.usuario.nombre}}</h1>
 </div>
 
