--- a/app/view/login.mustache
+++ b/app/view/login.mustache
@@ -8,8 +8,8 @@
             <form action="/login" method="post">
                 <fieldset>
                     <div class="form-group">
-                        <label for="nombre">Usuario</label>
-                        <input type="text" id="nombre" name="nombre" class="form-control" autocomplete="off" required>
+                        <label for="usuario">Usuario</label>
+                        <input type="text" id="usuario" name="usuario" class="form-control" autocomplete="off" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña</label>
