--- a/app/view/partial/header.mustache
+++ b/app/view/partial/header.mustache
@@ -4,7 +4,7 @@
         <ul class="navbar-nav mr-auto">
             {{#session.usuario}}
                 <li class="nav-item"><span class="navbar-brand mb-0 h1"><i class="fa fa-user" aria-hidden="true"></i>
-                    {{session.usuario.nombre}}</span></li>
+                    {{session.usuario.usuario}}</span></li>
                 <li class="nav-item"><a class="nav-link" href="/logout">Cerrar sesión</a></li>
             {{/session.usuario}}
             {{^session.usuario}}
