--- a/app/view/registro.mustache
+++ b/app/view/registro.mustache
@@ -8,12 +8,30 @@
             <form action="/registro" method="post">
                 <fieldset>
                     <div class="form-group">
-                        <label for="nombre">Usuario</label>
-                        <input type="text" id="nombre" name="nombre" class="form-control" autocomplete="off" required>
+                        <label for="usuario">Usuario</label>
+                        <input type="text" id="usuario" name="usuario" class="form-control" value="{{data.usuario}}" autocomplete="off" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="apellido">Apellido</label>
+                        <input type="text" id="apellido" name="apellido" class="form-control" value="{{data.apellido}}" autocomplete="off"
+                               required>
+                    </div>
+                    <div class="form-group">
+                        <label for="nombres">Nombres</label>
+                        <input type="text" id="nombres" name="nombres" class="form-control" value="{{data.nombres}}" autocomplete="off" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="fecha_nacimiento">Fecha de nacimiento</label>
+                        <input type="date" id="fecha_nacimiento" name="fecha_nacimiento"
+                               class="form-control" autocomplete="off" value="{{data.fecha_nacimiento}}" required>
                     </div>
                     <div class="form-group">
                         <label for="password">Contraseña</label>
-                        <input type="password" id="password" name="password" class="form-control" required>
+                        <input type="password" id="password" name="password" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="password2">Repetir contraseña</label>
+                        <input type="password" id="password2" name="password2" class="form-control" required>
                     </div>
                     <button type="submit" class="btn btn-primary">Registrar</button>
                 </fieldset>
