--- a/app/view/mostrar-publicacion.mustache
+++ b/app/view/mostrar-publicacion.mustache
@@ -1,45 +1,112 @@
 {{> header}}
 <div class="container">
-  <div class="row">
-    <div class="col-sm-1">
-    </div>
-    <div class="col-sm-10">
-        <div id="accordion">
-            {{#publicacion.secciones}}
-                <div class="card">
-                    <div class="card-header" id="headingOne">
-                    <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        {{nombre}}
-                        </button>
-                    </h5>
-                    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-10">
+            <div id="accordion">
+                {{#publicacion.secciones}}
+                    <div class="card">
+                        <div class="card-header" id="headingOne">
+                            <h5 class="mb-0">{{genero.descripcion}}</h5>
+                        </div>
 
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                    <div class="card-body">
-                        {{#noticias}}
-                            <div class="card" >
-                                <div class="card-body">
-                                    <h5 class="card-title">{{titulo}}</h5>
-                                    <p class="card-text">{{contenido}}</p>
-                                </div>
+                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
+                             data-parent="#accordion">
+                            <div class="card-body">
+                                {{#noticias}}
+                                    <div class="card">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{titulo}}</h5>
+                                            <p class="card-text">{{contenido}}</p>
+                                        </div>
+                                    </div>
+                                {{/noticias}}
+                                {{#session.usuario.puede_generar_contenido}}
+                                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                                            data-target="#modal-form-noticia" data-id-seccion="{{id}}">Crear noticia
+                                    </button>
+                                {{/session.usuario.puede_generar_contenido}}
                             </div>
-                        {{/noticias}}
-                        <a href="#" class="card-link">Nueva noticia</a>
+                        </div>
                     </div>
-                    </div>
-                </div>
-            {{/publicacion.secciones}}
+                {{/publicacion.secciones}}
+            </div>
+        </div>
+        <div class="col-sm-1">
         </div>
     </div>
-    <div class="col-sm-1">
-    </div> 
-  </div>
 </div>
+{{#session.usuario.puede_generar_contenido}}
+    <div class="modal fade" id="modal-form-noticia" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Formulario creación noticia</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="#" id="form-nueva-noticia">
+                        <fieldset>
+                            <div class="form-group">
+                                <label for="titulo">Titulo</label>
+                                <input type="text" class="form-control" name="titulo" id="titulo" autocomplete="off"
+                                       required>
+                            </div>
+                            <div class="form-group">
+                                <label for="contenido">Contenido</label>
+                                <textarea name="contenido" id="contenido" class="form-control"></textarea>
+                            </div>
+                            <input type="hidden" name="id_contenidista" value="{{session.usuario.id}}"/>
+                        </fieldset>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                    <button type="button" id="crear-noticia" class="btn btn-primary">Crear noticia</button>
+                </div>
+            </div>
+        </div>
+    </div>
+{{/session.usuario.puede_generar_contenido}}
 {{> footer}}
-<script type="text/javascript">
-    $(document).ready(() => {
 
-    });
+{{#session.usuario.puede_generar_contenido}}
+    <script type="text/javascript">
 
-</script>
+        $(document).ready(() => {
+            $('#modal-form-noticia').on('show.bs.modal', function(event) {
+                var button = $(event.relatedTarget);
+                var idSeccion = button.data('id-seccion');
+
+                $('#crear-noticia').click(function() {
+
+                    var data = {
+                        'titulo': $('#form-nueva-noticia input[name=titulo]').val(),
+                        'contenido': $('#form-nueva-noticia textarea[name=contenido]').val(),
+                    };
+
+                    $.ajax({
+                        type: 'POST',
+                        url: `/secciones/${idSeccion}/noticias`,
+                        data: data,
+                        statusCode: {
+                            200: function(data) {
+                                location.reload();
+                            },
+                            400: function() {
+                                alert('Mandaste fruta');
+                            },
+                            401: function(data) {
+                                alert('no tenés permisos suficientes');
+                            },
+                        },
+                    });
+                });
+
+            });
+        });
+    </script>
+{{/session.usuario.puede_generar_contenido}}
