--- a/app/view/login.mustache
+++ b/app/view/login.mustache
@@ -6,6 +6,9 @@
             Ingreso usuarios
         </div>
         <div class="card-body">
+            <div class="alert alert-primary" role="alert">
+                Profe, las credenciales para ingresar son: <pre>usuario: admin contraseña: 123456</pre>
+            </div>
             <form action="/login" method="post">
                 <fieldset>
                     <div class="form-group">
