--- a/app/view/dashboard.mustache
+++ b/app/view/dashboard.mustache
@@ -2,5 +2,8 @@
 <div class="container-fluid">
     <h1>Bienvenido, {{session.usuario.apellido}} {{session.usuario.nombre}}</h1>
 </div>
+{{#noticias}}
+    titulo: {{titulo}}<br/>
+{{/noticias}}
 {{> footer }}
 
