--- a/app/view/listar-publicaciones.mustache
+++ b/app/view/listar-publicaciones.mustache
@@ -22,7 +22,7 @@
                                 <td>{{nombre}}</td>
                                 <td>{{numero}}</td>
                                 <td>{{fecha}}</td>
-                                <td>{{id_estado}}</td>
+                                <td>{{estado.descripcion}}</td>
                                 <td><a class="nav-link" href="/publicaciones/{{id}}">VER</a></td>
                             </tr>
                         {{/publicaciones}}
