--- a/app/view/partial/header.mustache
+++ b/app/view/partial/header.mustache
@@ -6,9 +6,12 @@
                     {{session.usuario.usuario}}</span></li>
                 {{#session.usuario.puede_generar_contenido}}
                     <li><a class="nav-link" href="/publicaciones">Publicaciones</a></li>
-                    {{! <li><a class="nav-link" href="/crear-publicacion">Crear publicación</a></li> }}
+                {{! <li><a class="nav-link" href="/crear-publicacion">Crear publicación</a></li> }}
                 {{/session.usuario.puede_generar_contenido}}
                 <li class="nav-item"><a class="nav-link" href="/logout">Cerrar sesión</a></li>
+                {{#session.usuario.suscripcion_activa}}
+                    <li><span class="badge badge-warning">Suscripción activa</span></li>
+                {{/session.usuario.suscripcion_activa}}
             {{/session.usuario}}
             {{^session.usuario}}
                 <li class="nav-item"><a class="nav-link" href="/login">Iniciar sesión</a></li>
