--- a/app/view/dashboard.mustache
+++ b/app/view/dashboard.mustache
@@ -1,20 +1,21 @@
 {{> header }}
 <div class="container-fluid">
     <h1>Bienvenido, {{session.usuario.apellido}} {{session.usuario.nombre}}</h1>
-</div>
-<div class="row">
+    <div class="row center-xs" >
     {{#noticias}}
-        <div class="col-lg-3">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body" style="height=300px">
-                    <h5 class="card-title">{{titulo}}</h5>
-                    <p class="card-text">{{contenido}}</p>
-                    {{! <a href="#" class="btn btn-primary">Go somewhere</a>}}
-                </div> 
+            <div class="col-sm"style="margin-top:20px">
+                <div class="card" style="width: 15rem; height: 215px;">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body" style="width: 15rem; height: 160px; overflow:hidden">
+                        <h5 class="card-title">{{titulo}}</h5>
+                        <p class="card-text"style="width: 15rem; height: 66px; overflow:hidden">{{contenido}}</p>
+                        <a href="/noticias/{{id}}" class="btn btn-primary">ver noticia</a>
+                    </div> 
+                </div>
             </div>
-        </div>
-    {{/noticias}}
+        {{/noticias}}
+    </div>
 </div>
+
 {{> footer }}
 
