--- a/app/view/inicio.mustache
+++ b/app/view/inicio.mustache
@@ -1,7 +1,23 @@
 {{> header }}
 <div class="container-fluid">
     <h1 class="text-center">Infonete</h1>
+    <div class="row center-xs" >
+        {{#noticias}}
+            <div class="col-sm"style="margin-top:20px">
+                <div class="card" style="width: 15rem; height: 215px;">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body" style="width: 15rem; height: 160px; overflow:hidden">
+                        <h5 class="card-title">{{titulo}}</h5>
+                        <p class="card-text"style="width: 15rem; height: 66px; overflow:hidden">{{contenido}}</p>
+                        <a href="/noticias/{{id}}" class="btn btn-primary">ver noticia</a>
+                    </div> 
+                </div>
+            </div>
+        {{/noticias}}
+    </div>
 </div>
+
+
 {{> footer }}
 
 
