--- a/app/view/mostrar-publicacion.mustache
+++ b/app/view/mostrar-publicacion.mustache
@@ -68,7 +68,7 @@
                     </div>
                 {{/publicacion.secciones}}
                 {{#session.usuario.puede_generar_contenido}}
-                    <div id="accordion">
+                    <div id="accordion" style="margin-bottom: 50px;">
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <a class="font-weight-bold" data-toggle="modal"
