--- a/app/view/inicio.mustache
+++ b/app/view/inicio.mustache
@@ -3,7 +3,7 @@
     <h1 class="text-center">Infonete</h1>
     <div class="row center-xs" >
         {{#noticias}}
-            <div class="col-sm"style="margin-top:20px">
+            <div class="col-lg"style="margin-top:20px">
                 <div class="card" style="width: 20rem; height: 25rem;">
                     <img class="card-img-top" src="{{image_path}}" alt="{{titulo}}" style="min-height:212px">
                     <div class="card-body" style="width: 14rem; height: 160px; overflow:hidden">
