--- a/app/view/mostrar-publicacion.mustache
+++ b/app/view/mostrar-publicacion.mustache
@@ -53,7 +53,7 @@
                                             <h5 class="card-title">{{titulo}}</h5>
                                             <p class="card-text">{{{contenido}}}</p>
                                             {{#image_path}}
-                                                <img src="{{image_path}}" alt="">
+                                                <img src="{{image_path}}" alt=""style="width:200px">
                                             {{/image_path}}
                                         </div>
                                     </div>
