--- a/app/view/inicio.mustache
+++ b/app/view/inicio.mustache
@@ -1,20 +1,18 @@
 {{> header }}
-<div class="container-fluid">
-    <h1 class="text-center">Infonete</h1>
-    <div class="row center-xs" >
-        {{#noticias}}
-            <div class="col-lg"style="margin-top:20px">
-                <div class="card" style="width: 20rem; height: 25rem;">
-                    <img class="card-img-top" src="{{image_path}}" alt="{{titulo}}" style="min-height:212px">
-                    <div class="card-body" style="width: 14rem; height: 160px; overflow:hidden">
-                        <h5 class="card-title">{{titulo}}</h5>
-                        <p class="card-text"style="width: 15rem; height: 66px; overflow:hidden">{{contenido}}</p>
-                        <a href="/noticias/{{id}}" class="btn btn-primary">ver noticia</a>
-                    </div> 
-                </div>
+<h1 class="text-center">Infonete</h1>
+<div class="container-fluid" style="margin-bottom: 70px;">
+    {{#noticias}}
+        <div class="card mb-3">
+            {{#image_path}}
+            <img class="card-img-top" src="{{image_path}}" alt="{{titulo}}" style="min-width: 100%; max-height: 20rem; object-fit: cover;">
+            {{/image_path}}
+            <div class="card-body">
+                <h5 class="card-title">{{titulo}}</h5>
+                <p class="card-text">{{contenido}}</p>
+                <p class="card-text"><a href="/noticias/{{id}}" class="btn btn-primary">ver noticia</a></p>
             </div>
-        {{/noticias}}
-    </div>
+        </div>
+    {{/noticias}}
 </div>
 
 
